<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yerd.evaluacionpractica3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.yerd.evaluacionpractica3.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.yerd.evaluacionpractica3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.yerd.evaluacionpractica3.ui.categorias.Categoria"
        android:label="Guardar Categorias"
        tools:layout="@layout/fragment_categorias" />


    <fragment
        android:id="@+id/nav_productos"
        android:name="com.yerd.evaluacionpractica3.ui.productos.Productos"
        android:label="Guardar Productos"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_qcategorias"
        android:name="com.yerd.evaluacionpractica3.ui.Qcategoria.Qcategorias"
        android:label="Consultar Categorias"
        tools:layout="@layout/fragment_qcategorias" />

    <fragment
        android:id="@+id/nav_qproductos"
        android:name="com.yerd.evaluacionpractica3.ui.Qproductos.Qproductos"
        android:label="Consultar Productos"
        tools:layout="@layout/fragment_qproductos" />
</navigation>